# a2x

./: .a2x-context.md  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DIRECTION.md  LICENSE  PLAN.md  README.md  RELEASE-v0.9.0-alpha.md  ROADMAP.md  SECURITY.md  llms.txt
.commit_msgs/: fmt_agents.txt  phase2_h_followup.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: add-to-project.yml  ci.yml  cla.yml  docs.yml  release.yml
crates/a2x-agents/: Cargo.toml
crates/a2x-agents/src/: ccs_agent.rs  chat_agent.rs  chat_prompt.rs  chat_tools.rs  cli_agent.rs  context_memory.rs  lib.rs  lifecycle.rs  llm_agent.rs  llm_backend.rs  omega_agent.rs  orchestrator.rs  parse.rs
crates/a2x-agents/tests/: phase3_cross_machine.rs
crates/a2x-bus/: Cargo.toml
crates/a2x-bus/src/: async_bus.rs  async_tcp.rs  bridge.rs  bus.rs  discovery.rs  identity.rs  lib.rs  routing.rs  tcp_transport.rs  tls.rs  transport.rs  wire.rs
crates/a2x-ccs/: Cargo.toml
crates/a2x-ccs/src/: async_vm.rs  error.rs  lib.rs  memory.rs  parallel_swarm.rs  policy.rs  probe.rs  safety.rs  scheduler.rs  state.rs  state_ndarray.rs  vm.rs  world_graph.rs
crates/a2x-ccs/src/operators/: actuate.rs  bind.rs  differentiate.rs  evolve.rs  ground.rs  mod.rs  plan.rs  reflect.rs
crates/a2x-ccs/tests/: phase2_smoke.rs
crates/a2x-cli/: Cargo.toml
crates/a2x-cli/examples/: 01-sigma-hello.rs  02-multi-agent.rs  03-end-to-end-pipeline.rs
crates/a2x-cli/src/: main.rs
crates/a2x-cli/tests/: gateway_chat_integration.rs  integration_pipeline.rs
crates/a2x-client/: Cargo.toml
crates/a2x-client/src/: lib.rs
crates/a2x-core/: Cargo.toml
crates/a2x-core/src/: addressing.rs  agent.rs  agent_id.rs  capability.rs  concept.rs  entity.rs  error.rs  graph.rs  lib.rs  memory.rs  modality.rs  node.rs  opcode.rs  packet.rs  policy.rs  prelude.rs  program_id.rs  protocol.rs  relation.rs  state.rs
crates/a2x-gateway/: Cargo.toml
crates/a2x-gateway/examples/: 03-gateway-entity.rs
crates/a2x-gateway/src/: auth.rs  config.rs  dashboard.rs  entity.rs  error.rs  gateway.rs  lib.rs  rate_limiter.rs  security_event.rs  tls.rs  webhook.rs
crates/a2x-gateway/src/listeners/: http.rs  mod.rs  stdio.rs  tcp.rs  ws.rs
crates/a2x-omega/: Cargo.toml
crates/a2x-omega/src/: bridge.rs  compiler.rs  decoder.rs  encoder.rs  environment.rs  error.rs  ir.rs  learned_decoder.rs  learned_encoder.rs  lib.rs  mcp_bridge.rs  packet.rs  program.rs  semantic.rs  training.rs
crates/a2x-omega/src/passes/: constant_folding.rs  dead_code.rs  fusion.rs  layout.rs  mod.rs
crates/a2x-omega/tests/: omega_wire_roundtrip.rs
crates/a2x-probe/: Cargo.toml
crates/a2x-probe/src/: inspector.rs  lib.rs  tracer.rs
crates/a2x-sigma/: Cargo.toml
crates/a2x-sigma/benches/: tokenizer.rs
crates/a2x-sigma/fuzz/: Cargo.toml
crates/a2x-sigma/fuzz/fuzz_targets/: parser_never_panics.rs  tokenizer_never_panics.rs
crates/a2x-sigma/src/: binary.rs  context.rs  data.rs  display.rs  error.rs  intent.rs  lib.rs  packet.rs  parser.rs  plan.rs  program.rs  token.rs  tokenizer.rs
crates/a2x-sigma/tests/: proptest.proptest-regressions  proptest.rs
crates/a2x-startup/: Cargo.toml
crates/a2x-startup/src/: boot.rs  config.rs  key_rotation.rs  lib.rs  persistence.rs  resilience.rs  secure_storage.rs  shutdown.rs
docs/: A2X_TEAM_BRIEFING.md  book.toml  ccs-vm.md  omega-compilation.md  sigma-protocol.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  agent-model.md  api-python.md  api-rust.md  api-typescript.md  architecture.md  bus.md  ccs-operators.md  ccs-safety.md  ccs-state.md  ccs.md  changelog.md  cli.md  contributing.md  first-program.md  gateway.md  installation.md  intro.md  omega-encoding.md  omega-learned.md  omega-optimizer.md  omega.md  probe.md  quick-start.md  roadmap.md  sigma-context.md  sigma-data.md  sigma-intents.md  sigma-plan.md  sigma.md  startup.md  worldgraph.md
plans/: 01-sigma-language.md  02-omega-compiler.md  03-ccs-vm.md  04-bus.md  05-agents.md  06-entity-gateway.md  07-probe.md  08-ecosystem.md  09-core-types.md  10-concurrency.md  11-startup-shutdown.md  12-security.md  13-documentation.md  14-resilience.md  15-wasm.md  README.md
requests/: requests.md
scripts/: setup-hooks.sh  update-changelog.sh
sdks/python/: a2x_client.py
sdks/typescript/: a2x-client.ts
site/: _redirects  index.html
work-reports/: 2026-06-28-a2x-agents.md  2026-06-28-a2x-bus.md  2026-06-28-a2x-ccs.md  2026-06-28-a2x-cli.md  2026-06-28-a2x-omega.md  2026-06-28-a2x-sigma.md  2026-06-28-phase0-audit.md  2026-06-28-phase0-complete.md  2026-06-28-phase0-scaffold.md  2026-06-28-phase1-complete.md  2026-06-28-phase2-a-vm-operands.md  2026-06-28-phase2-b-node-allocation.md  2026-06-28-phase2-c-evolve.md  2026-06-28-phase2-complete.md  2026-06-28-phase2-g-ndarray.md  2026-06-28-phase2-h-compression.md  2026-06-28-phase2-i-ccs-agent-tick.md  2026-06-28-phase2-j-smoke.md  2026-06-28-phase2-lcg-hoist.md  2026-06-28-phase3-1-decoder-and-wire.md  2026-06-28-phase3-2-3-optimizer-and-tcp.md  2026-06-28-phase3-4-cross-machine.md  2026-06-28-phase3-progress-checkpoint.md  2026-06-28-phase4-learned.md  2026-06-28-phase5-probe.md  2026-06-28-phase6-entity-gateway.md  2026-06-29-bugfix-round1.md  2026-06-29-comprehensive-audit.md  2026-06-29-deep-research-improvements.md  2026-06-29-deep-research-round2.md  2026-06-30-audit-roadmap-implementation.md  2026-07-01-audit-findings.md  2026-07-01-functional-boot-plan.md  2026-07-01-future-directions.md  2026-07-03-bus-bridge.md  2026-07-03-gap-audit-boot-sequence.md  2026-07-05-p0-fork-merge-bus-transport.md  2026-07-06-p1-bus-hardening-gap-audit.md  2026-07-06-web-dashboard.md  2026-07-07-chat-agent-backend-wiring.md  (+6 more)
