[workspace]
resolver = "2"
members = [
    "crates/a2x-core",
    "crates/a2x-sigma",
    "crates/a2x-omega",
    "crates/a2x-bus",
    "crates/a2x-ccs",
    "crates/a2x-agents",
    "crates/a2x-gateway",
    "crates/a2x-client",
    "crates/a2x-cli",
    "crates/a2x-probe",
    "crates/a2x-startup",
]

[workspace.package]
version = "0.9.0-alpha"
edition = "2021"
rust-version = "1.75.0"
authors = ["A2X Contributors"]
license = "AGPL-3.0"
repository = "https://github.com/CanadianCowboy/a2x"
description = "A2X — Agent-to-Anything: an AI-native programming language + runtime"

[workspace.dependencies]
# External dependencies (centralized for workspace-wide consistency)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.7"
ndarray = "0.16"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
anyhow = "1"
blake3 = "1"
criterion = "0.5"
# Phase 6: gateway + client deps
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
uuid = { version = "1", features = ["v4"] }
# HTTP streaming (SSE)
futures-util = "0.3"
# Phase 8: Ed25519 agent identity + message signing (T4-1)
ed25519-dalek = "2"
rand = "0.8"
# TLS support (rustls — pure Rust, no OpenSSL dependency)
rustls = "0.23"
rustls-pemfile = "2"
webpki-roots = "0.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
