[package]
name = "a2x-bus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A2X message bus: routing, transport, agent discovery, wire format"

[features]
default = ["tokio"]
serde = ["dep:serde", "a2x-core/serde", "a2x-sigma/serde"]
tokio = ["dep:tokio"]
ed25519 = ["dep:ed25519-dalek", "dep:rand"]
tls = ["dep:rustls", "dep:rustls-pemfile", "dep:webpki-roots"]

[dependencies]
a2x-core = { path = "../a2x-core" }
a2x-sigma = { path = "../a2x-sigma" }
serde = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }

[lib]
name = "a2x_bus"
path = "src/lib.rs"
