[package]
name = "a2x-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A2X core primitives: types, traits, enums (zero-dependency foundation)"

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }
