[package]
name = "a2x-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A2X entity gateway: protocol listeners, auth, entity registry, webhooks"

[dependencies]
a2x-core = { path = "../a2x-core" }
a2x-sigma = { path = "../a2x-sigma" }
a2x-bus = { path = "../a2x-bus" }
a2x-agents = { path = "../a2x-agents" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
ctrlc = "3"
rustls = { workspace = true, optional = true }

[features]
default = []
tls = ["dep:rustls"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
reqwest = { workspace = true }

[lib]
name = "a2x_gateway"
path = "src/lib.rs"

[[bin]]
name = "a2x-gatewayd"
path = "src/bin/a2x-gatewayd.rs"
