[package]
name = "a2x-probe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A2X probe/debug tools for inspecting CCS internals"

[dependencies]
a2x-core = { path = "../a2x-core" }
a2x-ccs = { path = "../a2x-ccs" }

[lib]
name = "a2x_probe"
path = "src/lib.rs"
